# TGF

./: README.md
Simulations/: CMakeLists.txt  README.md  init_vis.mac  main.cc
Simulations/gdml/: satellite.gdml
Simulations/include/: ActionInitialization.hh  DataFile.hh  DataFileManager.hh  DataSatellite.hh  DetectorConstruction.hh  FileUtils.hh  G4Server.hh  GeneralParticleSource.hh  Histogramm.hh  IDetectorFactory.hh  IFieldFactory.hh  Logger.hh  PhysList.hh  ProtoWrapper.hh  RunAction.hh  SatelliteConstruction.hh  SatelliteMessenger.hh  SensitiveDetectorFactory.hh  SensitiveScoredDetector.hh  SerializeHistogram.hh  ServerSettings.hh  Settings.hh  SocketOutput.hh
Simulations/macros/: init.mac  init_port.mac  init_sum.mac  init_tyvek.mac  test.mac
Simulations/proto/: histogram.proto  satellite.proto
Simulations/python/: setup.py
Simulations/python/chibis/: convertor_tools.py  covert_to_hdf5.py  geant4_server.py  hdf5_tools.py  histogram_pb2.py  mean_table.py  proto_list.py  run.py  run_tools.py  satellite_pb2.py
Simulations/python/scripts/: chibis_client.py  chibis_file.py  satellite_0.py  satellite_1.py
Simulations/src/: ActionInitialization.cc  DetectorConstruction.cc  G4Server.cc  GeneralParticleSource.cc  Logger.cc  RunAction.cc  SatelliteMessenger.cc  SensitiveDetectorFactory.cc  SensitiveScoredDetector.cc  SerializeHistogram.cc
